--- a/Meteora/Meteora.vcxproj.filters
+++ b/Meteora/Meteora.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClInclude Include="src\utils\MeteoraDefs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\generators\WhiteNoise.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\generators\IGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\generators\SineWave.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\generators\WhiteNoise.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
