--- a/Meteora/Meteora.vcxproj.filters
+++ b/Meteora/Meteora.vcxproj.filters
@@ -18,45 +18,45 @@
     <ClInclude Include="src\models\MeteoraTypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\generators\IGenerator.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\generators\SineWave.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\utils\MeteoraDefs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\generators\WhiteNoise.h">
+    <ClInclude Include="src\modules\generators\IGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\generators\Sawtooth.h">
+    <ClInclude Include="src\modules\generators\Sawtooth.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\generators\SquareWave.h">
+    <ClInclude Include="src\modules\generators\SineWave.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\generators\TriangleWave.h">
+    <ClInclude Include="src\modules\generators\SquareWave.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\modules\generators\TriangleWave.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\modules\generators\WhiteNoise.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\generators\IGenerator.cpp">
+    <ClCompile Include="src\modules\generators\IGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\generators\SineWave.cpp">
+    <ClCompile Include="src\modules\generators\Sawtooth.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\generators\WhiteNoise.cpp">
+    <ClCompile Include="src\modules\generators\SineWave.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\generators\Sawtooth.cpp">
+    <ClCompile Include="src\modules\generators\SquareWave.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\generators\SquareWave.cpp">
+    <ClCompile Include="src\modules\generators\TriangleWave.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\generators\TriangleWave.cpp">
+    <ClCompile Include="src\modules\generators\WhiteNoise.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
