--- a/Meteora/Meteora.vcxproj.filters
+++ b/Meteora/Meteora.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="src\modules\mixers\BasicMixer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\modules\mixers\RingModulator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\modules\generators\IGenerator.cpp">
@@ -171,6 +174,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\modules\mixers\BasicMixer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\modules\mixers\RingModulator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
