[AR] fixed some bugs in the frequency calculation from a note and an octave. Added some tests

--- a/MeteoraTest/MeteoraTest.vcxproj.filters
+++ b/MeteoraTest/MeteoraTest.vcxproj.filters
@@ -26,7 +26,10 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="generators\TestSineWave.cpp">
+    <ClCompile Include="modules\generators\TestSineWave.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="utils\TestFrequencyHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
