--- a/MeteoraTest/MeteoraTest.vcxproj
+++ b/MeteoraTest/MeteoraTest.vcxproj
@@ -164,7 +164,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="generators\TestSineWave.cpp" />
+    <ClCompile Include="modules\generators\TestSineWave.cpp" />
+    <ClCompile Include="utils\TestFrequencyHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Meteora\Meteora.vcxproj">
