[AR] - Fixed bugs in the VCO oscillator (for the sine wave generator) - Added new tests for the VCO - Added an alias name for the VoltageControlledOscillator = VCO

--- a/Meteora/Meteora.vcxproj
+++ b/Meteora/Meteora.vcxproj
@@ -118,6 +118,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\modules\IModule.h" />
     <ClInclude Include="src\utils\FrequencyHelper.h" />
     <ClInclude Include="src\modules\mixers\RingModulator.h" />
     <ClInclude Include="src\modules\mixers\BasicMixer.h" />
