--- a/Meteora/Meteora.vcxproj.filters
+++ b/Meteora/Meteora.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="src\modules\IModule.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\utils\MathUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\modules\generators\IGenerator.cpp">
